# SimpleGL

./: CMakeLists.txt  TODO
cmake/: FindAssimp.cmake  FindFreeImage.cmake  FindGLEW.cmake  FindGLM.cmake
editor/: AssimpImporter.h  CMakeLists.txt  MainWindow.cpp  MainWindow.ui  QSGLWidget.cpp  resources.qrc
editor/src/: AssimpImporter.cpp  AssimpImporter.h  FbxImporter.cpp  FbxImporter.h  GLWidget.cpp  GLWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
lib/: Animation.cpp  Animation.h  AnimationTrack.cpp  Bone.cpp  Bone.h  CMakeLists.txt  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  InputStream.cpp  Instance.cpp  Instance.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OutputStream.cpp  OutputStream.h  PointLight.cpp  PointLight.h  Program.cpp  Program.h  Renderable.cpp  Root.cpp  Root.h  SceneNode.cpp  SceneNode.h  SceneObject.cpp  SceneObject.h  SpotLight.cpp  SpotLight.h  SubMesh.cpp  SubMesh.h  Types.h  Viewport.cpp  Viewport.h  (+2 more)
media/: Core.script  Default.frag  Default.vert  LightPoint.fs  Skinned.vs  Textured.vs  colored_fp.glsl  deferred_directional_light_fp.glsl  deferred_fp.glsl  deferred_geometry_fp.glsl  deferred_light_directional_fp.glsl  deferred_light_point_fp.glsl  deferred_light_point_vp.glsl  deferred_vp.glsl  directionalLight.frag  directionalLight.vert  minimal.frag  minimal.vert  pointLight.frag  pointLight.vert  projection.frag  projection.vert  skinned_vp.glsl  spotLight.frag  spotLight.vert  spot_light_fp.glsl  texture.frag  texture.vert  textured.frag  textured.vert  textured_fp.glsl  textured_vp.glsl
media/models/: astroboy.model  bob.model  dwarf.model  jaiqua.model  markus.model  ninja.model  sniper.model
media/shaders/: Default.fs  Default.vs  LightDirectional.fs  LightDirectional.vs  LightPoint.fs  LightPoint.vs  LightSpot.fs  Skinned.fs  Skinned.vs  Textured.vs
media/textures/: astroboy.tga  sniper_diffuse.dds  sniper_normal.dds
src/: AbstractShader.cpp  AbstractShader.h  Animation.cpp  Animation.h  AnimationTrack.cpp  AnimationTrack.h  AssimpImporter.cpp  AssimpImporter.h  Attribute.h  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  Bone.cpp  Bone.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubeMesh.cpp  CubeMesh.h  DeferredRenderer.cpp  DeferredRenderer.h  DirectionalLight.cpp  DirectionalLight.h  FragmentShader.cpp  FragmentShader.h  FrameBuffer.cpp  FrameBuffer.h  GBuffer.cpp  GBuffer.h  InputStream.cpp  InputStream.h  Instance.cpp  Instance.h  Light.cpp  Light.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Material.cpp  (+58 more)
test/: AssimpImporter.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.h  QSGLWidget.cpp  QSGLWidget.h
viewer/: CMakeLists.txt
